--- a/L4.2-testing-debugging.Rmd
+++ b/L4.2-testing-debugging.Rmd
@@ -26,7 +26,9 @@ Here are some other great resources:
 
 # Writing test cases
 
+<center>
 ![](images/test_cases_fry.png){ width=300 }
+</center>
 
 Writing test cases is part of the process of understanding a problem; if you don't know what the result of an example input should be, you can't know how to solve the problem.
 
