--- a/L6-vectors.Rmd
+++ b/L6-vectors.Rmd
@@ -335,26 +335,35 @@ x == y
 
 Instead of getting one `TRUE`, you get a vector of `TRUE`s, because the individual elements are indeed equal.
 
-To compare the _entire vector_, you should surround the `==` comparison within the `all()` function:
+To compare the _entire vector_, you should use the `identical()` function:
 
 ```{r}
-all(x == y)
+identical(x, y)
 ```
 
-The `all()` function works on any types of vectors:
+The `identical()` function works on any types of vectors:
 
 ```{r}
 x = c('one', 'two', 'three')
 y = c('one', 'two', 'three')
-all(x == y)
+identical(x, y)
 ```
 
-If any one element across the two vectors are different, `all()` will return `FALSE`:
+If any one element across the two vectors are different, `identical()` will return `FALSE`:
 
 ```{r}
 x <- c(1,2,3)
 y <- c(1,2,4)
-all(x == y)
+identical(x, y)
+```
+
+One final distinction is that `identical()` also compares the _names_ of the vector elements. If you have two vectors with the same elements but different names, `identical()` will return `FALSE`:
+
+```{r}
+x <- c(one = 1, two = 2, three = 3)
+y <- c(one = 1, two = 2, four = 3)
+x == y
+identical(x, y)
 ```
 
 ---
